[tool.poetry]
name = "periodiq"
version = "1.0.0"
description = "Simple Scheduler for Dramatiq Task Queue"
authors = ["Étienne BERSAC"]
license = "LGPL-3.0+"
readme = "README.md"
include = ["COPYING", "COPYING.LESSER"]

[tool.poetry.dependencies]
python = "^3.8"
dramatiq = "^1.5"
pendulum = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
flake8 = "^5.0.4"
pytest-mock = "3.12.0"

[tool.poetry.scripts]
periodiq = 'periodiq:entrypoint'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
